# Homework_Lab06

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.rtf  appveyor.yml
.github/workflows/: ci.yml
_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  lab06-1.0.0-Linux.deb
_build/_CPack_Packages/Linux/DEB/lab06-1.0.0-Linux/: control
_build/_CPack_Packages/Linux/RPM/: rpmbuildlab06.err  rpmbuildlab06.out
_build/_CPack_Packages/Linux/RPM/RPMS/: lab06-1.0.0-Linux.rpm
_build/_CPack_Packages/Linux/RPM/SPECS/: lab06.spec
_build/formatter_ex_lib/: Makefile  cmake_install.cmake
_build/formatter_lib/: Makefile  cmake_install.cmake
_build/solver_application/: Makefile  cmake_install.cmake  solver
_build/solver_lib/: Makefile  cmake_install.cmake
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
